# projections-v2

./: .gitignore  AGENTS.md  CLAUDE.md  DNP_FEATURES_IMPLEMENTATION_PLAN.md  README.md  ROADMAP.md  explore_bronze.py  explore_silver.py  inspect_14.py  inspect_parquet.py  inspect_run_v2.py  inspect_schema.py  inspect_worlds.py  live-pipeline.md  minutes_comparison.csv  minutes_projections_2025-12-23.csv  minutes_raw_comparison.csv  minutes_rot_comparison.csv  payouts.py  prefect.yaml  pyproject.toml  rates-northstar.md  run_stack.sh  scaffold.md  scoring.py  udo systemctl restart prefect-worker.service
.serena/: project.yml
config/: calibration-prod.yaml  fpts_current_run.json  minutes_archetype_deltas.yaml  minutes_current_run.json  minutes_current_run_dual_example.json  minutes_l2_reconcile.yaml  minutes_promotion.yaml  minutes_scoring_example.yaml  minutes_training_example.yaml  minutes_training_full_history.yaml  optimizer.yaml  ownership_calibration.yaml  ownership_eval_slice.json  rates_current_run.json  rotalloc_production.json  settings.yaml  sim_v2_profiles.json  usage_shares_current_run.json
docs/: FEATURE_CONTRACT_FIX.md  accuracy_analysis.md  deltas.md  dk_salaries_workflow.md  l2_team_minutes_reconciliation_spec.md  minutes_dashboard.md  minutes_dual_models.md  minutes_live_pipeline_spec.md  minutes_model_report.md  minutes_rotation_realism_report.md  minutes_v1_bad_fold.md  minutes_v1_model_roadmap.md  minutes_v1_model_roadmap_results.md  minutes_v1_retrain_backlog.md  minutes_v1_schema_plan.md  model_registry.md  ownership_model.md  rotalloc_production.md  sim_v2.md  sim_v2_live_pipeline_update.md  sim_v2_team_corr_baselines.md  usage_shares_v1_decision_addendum_nn.md  usage_shares_v1_report.md  usage_shares_v1_retrain_memo.md  usage_shares_v1_wire_decision.md
obsolete/: MANIFEST.md
prefect_flows/: hello.py  live_pipeline.py
projections/: DK_entries_fixed.csv  __init__.py  data.py  evaluate.py  features.py  paths.py  scrape.py  train.py  utils.py
reports/: ownership_codex_log.md  ownership_eval_before_after.md  ownership_production_path_eval_before_after.md
runs/: minutes_eval_raw_vs_reconciled_2025-11-25_2025-12-04.json
scrapers/: __init__.py  basketball_reference(deprecated).py  espn_injuries.py  nba_boxscore.py  nba_injuries.py  (+5 more)
scrapers/dk_contests/: analyze_contests.py  auth.py  build_ownership_data.py  download_contest_results.py  etl_duckdb.py  nba_gpp_scraper.py  parse_nba_contests.py  payouts_scraper.py  prelock.py  pyproject.toml
(+10888 files in other folders)
