[project]
name = "projections-v2"
version = "0.1.0"
description = "Maintainable NBA minutes prediction pipeline scaffolding."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Daniel Schrengost" }
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.5",
  "xgboost>=2.0",
  "torch>=2.2",
  "pyyaml>=6.0",
  "pydantic>=2.7",
  "typer>=0.12",
  "rich>=13.7",
  "lightgbm>=4.6.0",
  "pandera>=0.26.1",
  "cvxpy>=1.7.3",
  "ortools>=9.11",
  "pyarrow>=10.0.1",
  "tabula>=1.0.5",
  "httpx>=0.28.1",
  "tabula-py>=2.10.0",
  "pypdf2>=3.0.1",
  "fastapi>=0.115.5",
  "uvicorn>=0.38.0",
  "pulp>=2.8",
  "requests>=2.32.5",
  "duckdb>=1.4.2",
  "mlflow>=3.7.0",
  "python-multipart>=0.0.21",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["projections"]

[tool.uv]
dev-dependencies = [
  "pytest>=8.2",
  "ruff>=0.5"
]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["."]
testpaths = ["tests"]
