[project]
name = "dk-contests"
version = "0.1.0"
description = "DraftKings NBA GPP contest scraper"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
    "python-dotenv>=1.0",
    "playwright>=1.40",
]

[project.scripts]
scrape-gpp = "nba_gpp_scraper:main"
download-results = "download_contest_results:main"
